# kong-with-kafka-todo

./: .gitignore
kafka-messaging/: compose.yml
kafka-messaging/kafka-messages/: Dockerfile.dev  README.md  pyproject.toml
kafka-messaging/kafka-messages/kafka_messages/: main.py
